Fixed gap issues in links

--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,17 @@ body {
   background-color:rgb(235, 88, 88)           
 }
 
-nav ul{
+nav ul {
   display: flex;
   justify-content: center;
-  gap: 10px; 
+  gap: 2rem;         
+  list-style: none;
+  padding: 0;        
+  margin: 0;        
   background-color: black;
   color: white;
+}
+
 }
 
 header h1 {
